--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tensorflow>=2.13.0,<=2.15.1
-numpy
-Pillow
-matplotlib
-streamlit
+numpy==2.3.1
+Pillow==11.3.0
+streamlit==1.40.0
+tensorflow==2.19.0
+tensorflow_intel==2.18.0
